--- a/TestApi/appsettings.json
+++ b/TestApi/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings":{
+    "DefaultConnection":"Host=172.16.14.17;Port=5432;User ID=allsecit;Password=Allsec@123;Database=payroll_llsec;Pooling=true;"
+  }
+  
 }
